# agentic-octopus

./: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
agents/chat-assistant/: agent.yaml  prompt.md
agents/research-brief/: agent.yaml  prompt.md
db/migrations/: 0001_init.sql  0002_chat.sql  0003_tags.sql
docs/: RELEASING.md  worklog.md
docs/adr/: 0001-orchestration-service-shape.md  0002-python-uv-claude-agent-sdk.md  0003-postgres-pgvector-single-store.md  0004-hybrid-container-runtime.md  0005-approval-gate-run-state-primitive.md  0006-declarative-agent-definitions.md  0007-chat-capability-thin-clients.md  0008-telemetry-otel-tags.md
docs/api/: openapi.json
docs/rfcs/: 0001-agentic-octopus-the-spine.md
skills/: README.md  install.sh
skills/adr/: SKILL.md
skills/agentic-scan/: SKILL.md
skills/git-recon/: SKILL.md
skills/mr/: SKILL.md
skills/postmortem/: SKILL.md
skills/preflight/: SKILL.md
skills/refresh-data/: SKILL.md
skills/release/: SKILL.md
skills/resume/: SKILL.md
skills/rfc/: SKILL.md
skills/secrets-check/: SKILL.md
skills/ticket/: SKILL.md
skills/worklog/: SKILL.md
src/octo/: __init__.py  approvals.py  chat.py  config.py  db.py  executor.py  models.py  queue.py  registry.py  telemetry.py
src/octo/api/: auth.py  chat_routes.py  main.py  openai_compat.py  routes.py
src/octo/cli/: main.py
src/octo/providers/: base.py  claude.py  ollama.py  openrouter.py
src/octo/tools/: __init__.py  web.py
src/octo/worker/: main.py  scheduler.py
tests/integration/: conftest.py  test_chat.py  test_chat_tools.py  test_gate_roundtrip.py  test_migrations.py  test_queue.py  test_scheduler.py
tests/unit/: conftest.py  test_api.py  test_claude_provider.py  test_config.py  test_executor_openrouter.py  test_healthz.py  test_models.py  test_ollama_provider.py  test_openai_compat.py  test_providers.py  test_registry.py  test_scheduler_math.py  test_telemetry.py  test_tools.py
