[project]
name = "octo"
version = "0.7.0"
description = "agentic-octopus — orchestration spine for personal agentic applications"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary,pool]>=3.2",
    "pydantic-settings>=2.4",
    "croniter>=3",
    "pyyaml>=6",
    "typer>=0.12",
    "httpx>=0.27",
    "claude-agent-sdk>=0.2",
    "anthropic>=0.117.0",
    "ddgs>=9.14.4",
    "beautifulsoup4>=4.15.0",
    "opentelemetry-sdk>=1.44.0",
    "opentelemetry-exporter-otlp-proto-http>=1.44.0",
]

[project.scripts]
octo = "octo.cli.main:app"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octo"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "fastapi.Depends", "fastapi.Header"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
